# routepass

./: .env.saas.template  .env.selfhosted.template  .gitignore  AGENTS.md  AI_HANDOFF.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  GEMINI.md  IMPLEMENTATION_PLAN.md  Makefile  RATE_LIMIT_ARCHITECTURE.md  README.de.md  README.md  docker-compose.coolify.yml  docker-compose.yml  llms.txt
backend/: CLAUDE.md  Dockerfile  pyproject.toml  requirements.txt
backend/alembic/versions/: 002_add_connections_and_pipelines.py  003_drop_legacy_user_columns.py  004_add_user_name.py  005_add_activity_source.py  006_add_gpx_data.py  007_multi_destination_sync.py  008_connection_sync_state.py  009_add_gpx_storage_key.py  010_extend_source_and_direction_constraints.py  011_add_user_audit_log.py  012_merge_branches.py  013_add_connection_poll_interval.py  014_provider_registry_and_governor.py  015_allow_lifetime_subscription_tier.py  016_provider_policy_tier_label.py  017_activity_track_metrics.py  018_user_training_profile.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: config.py  governor.py  polling.py  rate_limit.py  registry.py  security.py  sports.py  tiers.py
backend/app/db/: session.py
backend/app/jobs/: sync_jobs.py  worker.py
backend/app/services/: activity_record.py  audit.py  garmin.py  intervals_icu.py  komoot.py  metrics.py  runalyze.py  (+3 more)
backend/scripts/: live_test.py  migrate_credentials.py
backend/tests/: test_destination_rate_limiter.py  test_governor.py  test_metrics.py  test_polling.py  test_rate_limiter.py  test_strava_client_headers.py
(+136 files in other folders)
