[project]
name = "routepass"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.9"
strict = false
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = [
    "B008",   # FastAPI: Depends/Query/Security calls in function argument defaults are intentional
]

[tool.ruff.lint.per-file-ignores]
"alembic/*" = ["F403", "E402"]
"app/services/sync.py" = ["E712"]     # SQLAlchemy ORM == True / == None comparisons
"app/jobs/sync_jobs.py" = ["E712", "E711"]  # SQLAlchemy ORM == True / == None comparisons
"app/api/v1/api_keys.py" = ["E711"]   # SQLAlchemy ORM == None comparison
"app/api/v1/auth.py" = ["E712"]       # SQLAlchemy ORM == True comparisons
"scripts/*" = ["E402"]                # env vars must be set before app imports
"tests/*" = ["E402"]                  # env vars must be set before app imports

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
